    TODO: Test new imageFileTypes stuff + UTI change + ibtool stuff
    TODO: Hide PROGRESS:XX and other bidirectional communications syntax from output text field
    TODO: Refactor status menu item output menu generation to share code between ScriptExec and Platypus.app
    TODO: Drag and drop for icon view should be file based, not TIFF pasteboard data

    * Fixed issue with generating icon from images on retina macs (IconFamily)
    * Fixed issue with icon alpha channels (IconFamily)
    * Finder now refreshes display of overwritten applications
    * Better error handling in file operations
    * New retina icons in script type popup button
    * No longer linking to Carbon framework
    * CFBundleDevelopmentRegion in generated apps now declared using ISO code
    * New default "Use system font" option for status menu item output
    * New MENUITEMICON: syntax to set menu item icon in status menu output mode
    * The built-in editor has been much enhanced, with line numbering, configurable text size and other improvements
    * Migrated from UKKqueue to VDKQueue and got all file system watching working properly again
    * Uniform Type Identifiers (UTIs) are now supported in drop settings
    * More examples
    * Scripts can now send messages to Notification Center via the NOTIFICATION:* syntax
    * New help buttons in main window and drop settings
    * Previewing status item menu now shows actual script output instead of placeholder text
    * Status menu items can now only have a title or an icon, not both, due to changes in Mac OS X
    * Show Shell Command window now shows install status of command line tool
    * Got rid of old, low-resolution preset icons
    * New release build script